# mindbox

./: .gitignore  README.md  pyproject.toml
shape_lib/: __init__.py  shapes.py
tests/: test_shapes.py
