[tool.poetry]
name = "shape_lib"
version = "0.1.0"
description = "A library for geometric shape calculations"
authors = ["Serge Podkolzin <serzhpodkolzin@ya.ru>"]
readme = "README.md"
packages = [{include = "shape_lib"}]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 